--- a/package.json
+++ b/package.json
@@ -1,74 +1,77 @@
 {
-    "name": "acordesfacil",
-    "displayName": "AcordesFacil",
-    "version": "1.0.0",
-    "description": "AcordesFacil",
-    "main": "index.js",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build --prod --base-href . --output-path ../fe/www/",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "android:install": "npm run build && cordova build android && echo 'Installing to remote device connected..' && adb install -r ./platforms/android/app/build/outputs/apk/debug/app-debug.apk"
+  "name": "acordesfacil",
+  "displayName": "AcordesFacil",
+  "version": "1.0.0",
+  "description": "AcordesFacil",
+  "main": "index.js",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build --prod --base-href . --output-path ../fe/www/",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "android:install": "npm run build && cordova build android && echo 'Installing to remote device connected..' && adb install -r ./platforms/android/app/build/outputs/apk/debug/app-debug.apk"
+  },
+  "author": "Apache Cordova Team",
+  "license": "Apache-2.0",
+  "dependencies": {
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.3",
+    "@angular/common": "~7.0.0",
+    "@angular/compiler": "~7.0.0",
+    "@angular/core": "~7.0.0",
+    "@angular/forms": "~7.0.0",
+    "@angular/http": "~7.0.0",
+    "@angular/material": "^7.0.3",
+    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/router": "~7.0.0",
+    "browser-sync": "^2.26.3",
+    "cheerio": "^0.19.0",
+    "cordova-android": "^7.1.1",
+    "cordova-plugin-browsersync": "^1.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "core-js": "^2.5.4",
+    "csp-parse": "0.0.2",
+    "elementtree": "^0.1.7",
+    "glob": "^5.0.15",
+    "hammerjs": "^2.0.8",
+    "milligram": "^1.3.0",
+    "npm": "^2.15.12",
+    "plist": "^1.2.0",
+    "q": "^1.5.1",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.2",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-browsersync": {}
     },
-    "author": "Apache Cordova Team",
-    "license": "Apache-2.0",
-    "dependencies": {
-        "@angular/animations": "~7.0.0",
-        "@angular/common": "~7.0.0",
-        "@angular/compiler": "~7.0.0",
-        "@angular/core": "~7.0.0",
-        "@angular/forms": "~7.0.0",
-        "@angular/http": "~7.0.0",
-        "@angular/platform-browser": "~7.0.0",
-        "@angular/platform-browser-dynamic": "~7.0.0",
-        "@angular/router": "~7.0.0",
-        "browser-sync": "^2.26.3",
-        "cheerio": "^0.19.0",
-        "cordova-android": "^7.1.1",
-        "cordova-plugin-browsersync": "^1.1.0",
-        "cordova-plugin-whitelist": "^1.3.3",
-        "core-js": "^2.5.4",
-        "csp-parse": "0.0.2",
-        "elementtree": "^0.1.7",
-        "glob": "^5.0.15",
-        "milligram": "^1.3.0",
-        "npm": "^2.15.12",
-        "plist": "^1.2.0",
-        "q": "^1.5.1",
-        "rxjs": "~6.3.3",
-        "zone.js": "~0.8.26"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.10.0",
-        "@angular/cli": "~7.0.2",
-        "@angular/compiler-cli": "~7.0.0",
-        "@angular/language-service": "~7.0.0",
-        "@types/jasmine": "~2.8.8",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.9.4",
-        "codelyzer": "~4.5.0",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.0.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.1",
-        "karma-jasmine": "~1.1.2",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.4.0",
-        "ts-node": "~7.0.0",
-        "tslint": "~5.11.0",
-        "typescript": "~3.1.1"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-whitelist": {},
-            "cordova-plugin-browsersync": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
