--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-oauth2-oidc": "^5.0.2",
     "browser-sync": "^2.26.3",
     "cheerio": "^0.19.0",
     "cordova": "^8.1.2",
