--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "angular-oauth2-oidc": "^5.0.2",
     "browser-sync": "^2.26.3",
     "cheerio": "^0.19.0",
     "cordova": "^8.1.2",
     "cordova-android": "^7.1.4",
+    "cordova-browser": "^5.0.4",
     "cordova-plugin-browsersync": "^1.1.0",
+    "cordova-plugin-googleplus": "^7.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "csp-parse": "0.0.2",
